--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,107 @@
-body
+*
 {
-  background: #F0F0F0;
+  margin:0px;
+  padding:0px;
+  box-sizing:border-box;
+  
 }
-.icon
+.manout
 {
-  position:fixed;
-  left:50%;
+  position:absolute;
+  height:300px;
+  width:300px;
+  top:25%;
+  left:40%;
+  background: rgba(221,221,221,0.5);
+  border-radius:50%;
+  overflow:hidden;
+  z-index:2;
+}
+.cup
+{
+  position:absolute;
+  top:25%;
+  left:38.3%;
+  z-index:4;
+  animation-name:moving;
+  animation-duration:1s;
+  animation-iteration-count:infinite;
+  animation-direction:alternate;
+  
+}
+@keyframes moving
+{
+ 
+  0%
+  {
+    left:38%;
+  }
+  
+  50%
+  {
+   top:30%;
+  }
+  
+  100%
+  {
+    left:40%;
+  }
+}
+.bottom1
+{
+  position:absolute;
+  width:100px;
+  height:200px;
+  top:78%;
+  left:51%;
+  background:rgba(222,222,221,0.5);
+  clip-path: polygon(35% 0, 65% 0, 100% 80%, 0 80%);
+  z-index:3;
+}
+.eye
+{
+  position:absolute;
+  height:40px;
+  width:100px;
+  background:white;
+  border-radius: 60px 60px 0px 0;
+  transform:rotate(-180deg);
+  top:130px;
+  left:100px;
+  z-index:4;
+}
+.ball
+{
+  position:absolute;
+  height:60%;
+  width:40%;
+  background:linear-gradient(45deg,           rgba(253, 15, 1, 1)25%, rgba(248,110,113,   1)67%); 
+  border-radius:50px 50px 0 0;
+  left:30%;
+  top:41%;
+}
+.ball2
+{
+  position:absolute;
+  height:50%;
+  width:30%;
+  background:black;
+  left:35%;
   top:50%;
-  width:75px;
-  height:75px;
-  background:linear-gradient(45deg,#FD9C36 0%,#FCBE5C 80%);
-  border-radius: 15px;
-  box-shadow:-3px -3px 5px rgba(0, 0, 0, .3);
-  transform:translate(50%,50%)
+  border-radius:100%;
+  box-shadow:0 0 10px 0px;
 }
-.water
+.circle
 {
   position:absolute;
-  bottom:0;
-  background:rgba(0,190,177,.4);
-  width:75px;
+  height:150px;
+  width:150px;
+  top:75px;
+  left:75px;
+  background:linear-gradient(45deg, rgba(0, 0, 0, 0.9)35%, rgba(27, 35, 39, 0.7)67%); 
+  border-radius:50%;
+  box-shadow:0px 0px 30px 25px;
+  overflow:hidden;
+  z-index:1;
 }
-.wave1
-{
-  height:22px;
-  border-top-right-radius:100% 0px;
-  border-top-left-radius:100% 20px;
-  border-bottom-left-radius:20px;
-  border-bottom-right-radius:20px;
-}
-.wave2
-{
-  height:25px;
-  border-top-right-radius:100% 5px;
-  border-top-left-radius:100% 5px;
-  border-bottom-left-radius:20px;
-  border-bottom-right-radius:20px;
-}
-.wave3
-{
-  height:20px;
-  border-top-right-radius:100% 15px;
-  border-top-left-radius:100% 0px;
-  border-bottom-left-radius:20px;
-  border-bottom-right-radius:20px;
-}
-.boat
-{
-  position:absolute;
-  left:50%;
-  bottom:8px;
-  transform:translate(-50%,-50%);
-  background:#EE6648;
-  border-bottom-right-radius:40px;
-  border-bottom-left-radius:40px;
-  width:50px;
-  height:15px;
-}
-.sail1
-{
-  position:absolute;
-  left:calc(50%+12px);
-  top:28px;
-  transform:translate(150%,-50%);
-  width:0;
-  height:0;
-  border-style:solid;
-  border-width:30px 0 0 25px;
-  border-color:transparent transparent transparent #FFF8ED
-}
-.sail2
-{
-  position:absolute;
-  left:calc(50%-14px);
-  top:32px;
-  transform:translate(60%,-50%);
-  width:0;
-  height:0;
-  border-style:solid;
-  border-width:0 0 22px 22px;
-  border-color:transparent transparent #FFF8ED transparent 
-}
+
