--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@
 }
 .bottom1
 {
-  position:absolute;
+  position:fixed;
   width:100px;
   height:200px;
-  top:78%;
-  left:51%;
+  top:75%;
+  left:48%;
   background:rgba(222,222,221,0.5);
   clip-path: polygon(35% 0, 65% 0, 100% 80%, 0 80%);
   z-index:3;
